Made End Portal in Compendium 2D
Goodbye 3D depth magic OpenGL bollocks, welcome custom 2D parallax. This
should also improve the performance massively.

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -165,6 +165,8 @@ container.endPowderEnhancements=End Powder Enhancements
 container.charmPouch=Charm Pouch
 container.runeCrafting=Rune Crafting
 
+key.openCompendium=Ender Compendium
+
 achievement.theMoreYouKnow=The more you know
 achievement.theMoreYouKnow.desc=Craft an Ender Compendium
 achievement.newAdventures=Time for new adventures!
