Moved stuff, work on fragments, new fragment type

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -76,7 +76,7 @@ item.endermanRelicShattered.name=Shattered Enderman Relic
 item.endermanRelicRepaired.name=Enderman Relic
 item.bucketEnderGoo.name=Ender Goo Bucket
 item.enderCompendium.name=Ender Compendium
-item.knowledgeFragment.name=Knowledge Fragment
+item.knowledgeNote.name=Knowledge Note
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
 item.fireShard.name=Fire Shard
