Fixed Biome Compass, tweaked textures and note

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -13,10 +13,12 @@ tile.essenceAltar.spectral.name=Spectral Essence Altar
 tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
 tile.endPowderOre.name=End Powder Ore
+tile.endiumOre.name=Endium Ore
 tile.stardustOre.name=Stardust Ore
 tile.igneousRockOre.name=Igneous Rock Ore
 tile.instabilityOrbOre.name=Instability Orb Ore
 tile.enderGoo.name=Ender Goo
+tile.endiumBlock.name=Endium Block
 tile.endStoneTerrain.infested.name=Infested End Stone
 tile.endStoneTerrain.burned.name=Burned End Stone
 tile.endStoneTerrain.enchanted.name=Enchanted End Stone
@@ -56,6 +58,7 @@ item.essence.spectral.name=Spectral Essence
 item.lorePage.name=Adventurer's Diary
 item.altarNexus.name=Altar Nexus
 item.endPowder.name=End Powder
+item.endiumIngot.name=Endium Ingot
 item.stardust.name=Stardust
 item.igneousRock.name=Igneous Rock
 item.instabilityOrb.name=Instability Orb
