--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -10,6 +10,7 @@ tile.essenceAltar.basic.name=Basic Essence Altar
 tile.essenceAltar.dragon.name=Dragon Essence Altar
 tile.essenceAltar.fiery.name=Fiery Essence Altar
 tile.essenceAltar.spectral.name=Spectral Essence Altar
+tile.voidChest.name=Void Chest
 tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
 tile.endPowderOre.name=End Powder Ore
@@ -163,6 +164,7 @@ entity.hauntedMiner.name=Haunted Miner
 namegenerator.middle=, the 
 
 container.enhancedBrewing=Enhanced Brewing Stand
+container.voidChest=Void Chest
 container.decompositionTable=Decomposition Table
 container.energyExtractionTable=Energy Extraction Table
 container.endPowderEnhancements=End Powder Enhancements
