--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -52,6 +52,7 @@ tile.dungeonPuzzle.wallRock.name=Dungeon Puzzle (Wall Rock)
 tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
 tile.energyCluster.name=Energy Cluster
 tile.cinder.name=Cinder
+tile.persegrit.name=Persegrit
 
 item.essence.dragon.name=Dragon Essence
 item.essence.fiery.name=Fiery Essence
