Texture tweaks, mental preparation for lab

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -53,6 +53,7 @@ tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
 tile.energyCluster.name=Energy Cluster
 tile.cinder.name=Cinder
 tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
 
 item.essence.dragon.name=Dragon Essence
 item.essence.fiery.name=Fiery Essence
