--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -89,7 +89,7 @@ challenge.difficulty.mediumorhard=Normal / Difficile
 item.enderCompendium.name=Compendium du Néant
 item.knowledgeFragment.name=Fragment de connaissance
 tile.decompositionTable.name=Table de décomposition
-tile.energyExtractionTable.name=Table d'extraction d'Énergie
+tile.energyExtractionTable.name=Table d'extraction d'énergie
 tile.ravagedBrick.name=Brique ravagée
 tile.energyCluster.name=Grappe d'Énergie
 item.spectralWand.name=Baguette spectrale
@@ -114,56 +114,56 @@ achievement.traveling101=Voyager 101
 achievement.rebirth.desc=Utilise le convocateur de la Fin pour régénérer le Néant
 achievement.rebirth=Un nouveau départ
 achievement.learningThePowers.desc=Fabriquez un autel à essence de dragon
-item.endermanRelicShattered.name=Relique d'Enderman Fracassée
-container.endPowderEnhancements=Renforcements de Poudre de Néant
+item.endermanRelicShattered.name=Relique d'Enderman fracassée
+container.endPowderEnhancements=Renforcements de poudre de Néant
 achievement.theMoreYouKnow=Le plus que tu sais
-achievement.theMoreYouKnow.desc=Frabriquer un Compendium du Néant
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
-tile.ravagedBrickGlow.name=Glowing Ravaged Brick
-tile.ravagedBrickSlab.name=Ravaged Brick Slab
-tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.cinder.name=Cinder
-item.scorchingPickaxe.name=Scorching Pickaxe
-item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
-entity.louse.name=Louse
-container.charmPouch=Charm Pouch
-container.runeCrafting=Rune Crafting
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+achievement.theMoreYouKnow.desc=Fabriquer un Compendium du Néant
+tile.crossedDecoration.violetMoss.tall.name=Grande mousse violette
+tile.crossedDecoration.violetMoss.moderate.name=Mousse violette moyenne
+tile.crossedDecoration.violetMoss.short.name=Petite mousse violette
+tile.ravagedBrickSmooth.name=Brique ravagée lissée
+tile.ravagedBrickGlow.name=Brique ravagée luisante
+tile.ravagedBrickSlab.name=Dalle de brique ravagée
+tile.ravagedBrickStairs.name=Escalier de brique ravagée
+tile.ravagedBrickFence.name=Barrière de brique ravagée
+tile.cinder.name=Incinérateur
+item.scorchingPickaxe.name=Pioche torride
+item.charmPouch.name=Poche de charmes
+item.rune.power.name=Rune du pouvoir
+item.rune.agility.name=Rune de l'agilité
+item.rune.vigor.name=Rune de vigueur
+item.rune.defense.name=Rune de défense
+item.rune.magic.name=Rune de magie
+item.rune.void.name=Rune du vide
+item.charm.basicpower.name=Charme du pouvoir
+item.charm.basicagility.name=Charme d'agilité
+item.charm.basicvigor.name=Charme de vigueur
+item.charm.basicdefense.name=Charme de défense
+item.charm.basicmagic.name=Charme de magie
+item.charm.equality.name=Charme d'égalité
+item.charm.blocking.name=Charme de bloquage
+item.charm.blockingreflection.name=Charme de réflexion de bloquage
+item.charm.digestiverecover.name=Charme de récupération digestive
+item.charm.lifesteal.name=Charme de vol de vie
+item.charm.damageredirection.name=Charme de redirection des dommages
+item.charm.magicpenetration.name=Charme de pénétration magique
+item.charm.witcheryharm.name=Charme de dommage de sorcellerie
+item.charm.witcherydefense.name=Charme de défense de sorcellerie
+item.charm.fallingprotection.name=Charme de protection des chutes
+item.charm.haste.name=Charme de hâte
+item.charm.criticalstrike.name=Charme de coup critique
+item.charm.seconddurability.name=Charme de seconde durabilité
+item.charm.voidrescue.name=Charme de sauvetage du vide
+item.charm.slaughterimpact.name=Charme d'impact de massacre
+item.charm.lastresort.tooltip=Teleporte $0 blocs au-delà de l'impact de la canne à pèche hit rechargé en $1 secondes
+item.charm.lastresort.name=Charme du dernier recours
+item.charm.magicdefense.tooltip=-$0 dégâts magiques pris
+item.charm.magicdefense.name=Charme de défense magique
+entity.louse.name=Pou
+container.charmPouch=Poche de charmes
+container.runeCrafting=Fabrication de Rune
+item.charm.blockingrepulsion.tooltip=-$0 dégâts pris et repousé de $1x
+item.charm.blockingrepulsion.name=Charme de répultion bloquée
 item.fireShard.name=Fire Shard
 item.charm.basicpower.tooltip=+$0 damage
 item.charm.basicagility.tooltip=+$0 speed
